--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
