--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@fortawesome/angular-fontawesome": "^0.10.2",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ng2-search-filter": "^0.5.1",
