--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.7",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@auth0/angular-jwt": "^5.0.2",
     "@fortawesome/angular-fontawesome": "^0.10.2",
+    "angular-material": "^1.2.5",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ng2-search-filter": "^0.5.1",
